--- a/image_segmentation.ipynb
+++ b/image_segmentation.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
    "source": [
     "orange1 = Image.open('Image/2mode.jpg').convert('RGB')\n",
     "orange1 = np.asarray(orange1)\n",
-    "orange1 = NoiseOverlay(orange1).add_gaussian_noise(40, 40)\n",
+    "g_orange1 = Filters(orange1).gamma_correction(2)\n",
     "\n",
     "name = '2mode'\n",
     "image = np.copy(orange1)\n",
