HOG Identification implemented

--- a/Research_Project/HoughTransformResearch.ipynb
+++ b/Research_Project/HoughTransformResearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,42 +19,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a function that converts an image to hough's space."
+    "The two points in each cluster that have the max distance between them are the points that define the extreme lines in the curve."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2), (9, 10))\n"
+     ]
+    }
+   ],
    "source": [
-    "def Hough_Space(image):\n",
-    "    image = image.astype(np.float32)\n",
-    "    \n",
-    "    # Define the Hough space\n",
-    "    theta = np.linspace(-np.pi / 2, np.pi / 2, 180)\n",
-    "    width, height = image.shape[:2]\n",
-    "    diag_len = np.sqrt(width * width + height * height)\n",
-    "    diag_len = int(diag_len)\n",
-    "    rho = np.linspace(-diag_len, diag_len, diag_len * 2)\n",
     "\n",
-    "    # Compute the Hough space\n",
-    "    hough_space = np.zeros((len(rho), len(theta)))\n",
-    "    for x in range(width):\n",
-    "        for y in range(height):\n",
-    "            if image[x][y] != 0:\n",
-    "                for t_idx in range(len(theta)):\n",
-    "                    t = theta[t_idx]\n",
-    "                    r = x * np.cos(t) + y * np.sin(t)\n",
-    "                    r_idx = np.argmin(np.abs(rho - r))\n",
-    "                    hough_space[r_idx][t_idx] += 1\n",
+    "# Assuming the points are given as a list of tuples\n",
+    "def left_right(points):\n",
+    "  # Initialize the leftmost and rightmost points\n",
+    "  left = points[0]\n",
+    "  right = points[0]\n",
+    "  # Loop through all points\n",
+    "  for point in points:\n",
+    "    # Compare the x-coordinates of the points\n",
+    "    if point[0] < left[0]:\n",
+    "      # Update the leftmost point\n",
+    "      left = point\n",
+    "    elif point[0] > right[0]:\n",
+    "      # Update the rightmost point\n",
+    "      right = point\n",
+    "  # Return the leftmost and rightmost points\n",
+    "  return (left, right)\n",
     "\n",
-    "    return hough_space"
+    "# Example\n",
+    "points = [(1, 2), (3, 4), (5, 6), (7, 8), (9, 10)]\n",
+    "print(left_right(points))\n",
+    "# Output: ((1, 2), (9, 10))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clustering Algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,15 +82,32 @@
     "# Define a function that takes a list of points and returns the labels and the number of clusters\n",
     "def dbscan_cluster(points):\n",
     "  # Convert the points to a numpy array\n",
-    "  points = np.array(points)\n",
+    "  points = np.squeeze(np.array(points))\n",
     "  # Create a dbscan object with some parameters\n",
     "  dbscan = DBSCAN(eps=0.5, min_samples=5)\n",
     "  # Fit the dbscan object to the points and get the labels\n",
     "  labels = dbscan.fit_predict(points)\n",
-    "  # Get the number of clusters (excluding noise)\n",
-    "  n_clusters = len(set(labels)) - (1 if -1 in labels else 0)\n",
-    "  # Return the labels and the number of clusters\n",
-    "  return labels, n_clusters\n"
+    "  # Create an empty dictionary to store the lists of points\n",
+    "  clusters = {}\n",
+    "\n",
+    "  # Iterate over the unique labels\n",
+    "  for label in np.unique(labels):\n",
+    "\n",
+    "      # Filter the points that belong to the current label\n",
+    "      points = points[labels == label]\n",
+    "\n",
+    "      # Convert the points to a list of tuples\n",
+    "      points = [tuple(p) for p in points]\n",
+    "\n",
+    "      # Store the list of points in the dictionary with the label as the key\n",
+    "      clusters[label] = points\n",
+    "  return clusters\n",
+    "\n",
+    "\n",
+    "# The output of this code is:\n",
+    "\n",
+    "# {-1: [(25, 80)], 0: [(1, 2), (2, 2), (2, 3)], 1: [(8, 7), (8, 8)]}\n",
+    "# As you can see, the dictionary contains three keys: -1 for the outlier, 0 and 1 for the two clusters. The values are the lists of points that belong to each cluster."
    ]
   },
   {
@@ -82,12 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a function to convert houghs points back to normal space."
+    "This function applies the necessary hough operations on the segmented image."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,15 +140,9 @@
     "  # create an array of theta values from -90 to 90 degrees\n",
     "  theta = np.deg2rad(np.arange(-90, 90))\n",
     "  \n",
-    "  # create an array of rho values from -max_dist to max_dist\n",
-    "  rho = np.linspace(-max_dist, max_dist, 2 * max_dist)\n",
-    "  \n",
     "  # create an empty accumulator array with dimensions (rho, theta)\n",
     "  accumulator = np.zeros((2 * max_dist, len(theta)))\n",
-    "  \n",
-    "  # find the indices of the edge pixels in the image\n",
-    "  y_indices, x_indices = np.nonzero(image)\n",
-    "  \n",
+    "\n",
     "  # loop through each pixel in the image\n",
     "  for x in range(width):\n",
     "    for y in range(height):\n",
@@ -131,66 +158,28 @@
     "  \n",
     "  \n",
     "  stretched_houghs = ImageFilters(accumulator).process(contrast_stretch())\n",
-    "  segmented_houghs = ImageSegment(stretched_houghs).process(Global_Threshold(100))\n",
     "  \n",
+    "  _=ImageUtil(stretched_houghs).save_image_to_folder('accumulator', name)\n",
+    "    \n",
+    "  segmented_houghs = ImageSegment(stretched_houghs).process(Global_Threshold(threshold))\n",
     "  segmented = segmented_houghs * stretched_houghs\n",
     "  \n",
-    "  _=ImageUtil(segmented).save_image_to_folder('accumulator', name)\n",
+    "  _=ImageUtil(segmented).save_image_to_folder('segmented', name)\n",
     "  \n",
-    "  # create an empty list to store the lines\n",
-    "  line_points = []\n",
-    "  \n",
-    "  # loop through each cell in the accumulator array\n",
-    "  for r in range(2 * max_dist):\n",
-    "    for t in range(len(theta)):\n",
-    "      rh = rho[r]\n",
-    "      th = theta[t]\n",
-    "      # append the line to the list as a tuple\n",
-    "      line_points.append((rh, th))"
+    "  return segmented"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def plot_lines_on_image(image, lines):\n",
-    "  # image is a numpy array representing an image\n",
-    "  # lines is a list of tuples (x1, y1, x2, y2) representing the endpoints of each line\n",
-    "  # plots the image and the lines on a figure and shows it\n",
-    "  \n",
-    "  # create a figure and an axes object\n",
-    "  fig, ax = plt.subplots()\n",
-    "  \n",
-    "  # plot the image on the axes object\n",
-    "  ax.imshow(image)\n",
-    "  \n",
-    "  # loop through each line in the list\n",
-    "  for line in lines:\n",
-    "    # unpack the endpoints of the line\n",
-    "    x1, y1, x2, y2 = line\n",
-    "    # plot the line on the axes object\n",
-    "    ax.plot([x1, x2], [y1, y2], color=\"red\", linewidth=1)\n",
-    "  \n",
-    "  # show the figure\n",
-    "  plt.show()\n",
-    "  \n",
-    "  return fig"
+    "Function Pipeline for detection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,53 +189,29 @@
     "\n",
     "\n",
     "def pipeline(img_path, folder, name):\n",
+    "    \n",
     "    image = Image.open(img_path).convert('L')\n",
     "    image = np.array(image)\n",
-    "    # inverted = ImageColorSpace(image).process(inversion())\n",
-    "    # print(np.max(inverted))\n",
-    "    print(image.shape)\n",
+    "\n",
     "    dilated = ImageProcessor(image).process(Dilation(), kernel)\n",
     "    closed = ImageProcessor(dilated).process(Erosion(), kernel)\n",
     "    sauvola = ImageSegment(closed).process(Pixel_Filter(3, 50, 'Sauvola'))\n",
-    "    # Apply edge detection\n",
-    "    # edges = cv2.Canny(closed,50,150,apertureSize = 3)\n",
+    "\n",
     "    seggrey = sauvola * closed\n",
     "    seggrey = np.squeeze(seggrey)\n",
     "    \n",
-    "    print(seggrey.shape)\n",
-    "    # _=ImageUtil(seggrey).save_image_to_folder('folder1', name)\n",
+    "    hough_accumulator = hough_lines(seggrey, 120, folder, name)\n",
     "    \n",
-    "    hough_lines(seggrey, 20, folder, name)\n",
-    "    \n",
-    "    # stretched_houghs = ImageFilters(houghs).process(contrast_stretch())\n",
-    "    # thresholded = ImageSegment(stretched_houghs).process(Global_Threshold(100))\n",
+    "    labels, clusters = dbscan_cluster(hough_accumulator)\n",
+    "\n",
     "    return seggrey"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n",
-      "(100, 100)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set the path to your test images folder\n",
     "target_folder = 'test_images'\n",
